<resources>
    <string name="app_name">APIKA</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_event">Event</string>
    <string name="nav_loker">Loker</string>
    <string name="nav_project">Project</string>

    <string name="event_held">Events held</string>
    <string name="post_view">Post viewed</string>
    <string name="project_take">Project taken</string>
    <string name="viewed_profile">Viewed your profile</string>
    <string name="img_profile">Profile Image</string>
    <string name="img_landscape">Lanscape Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- String home fragment -->
    <string name="profile_ika">IKA Profile</string>
    <string name="memeber_ika">IKA Members</string>
    <string name="settings">Settings</string>
</resources>
