<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_home"
        android:icon="@drawable/baseline_home_white_24dp"
        android:id="@+id/nav_home" />
    <item android:title="@string/nav_event"
        android:icon="@drawable/baseline_event_white_24dp"
        android:id="@+id/nav_event" />
    <item android:title="@string/nav_project"
        android:icon="@drawable/baseline_assignment_black_24dp"
        android:id="@+id/nav_project" />
    <item android:title="@string/nav_loker"
        android:icon="@drawable/baseline_work_white_24dp"
        android:id="@+id/nav_loker" />
    <item android:title="@string/nav_profile"
        android:icon="@drawable/baseline_account_circle_white_24dp"
        android:id="@+id/nav_profile" />
</menu>