<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.arjuna.apika.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/dylan_unsplash"
                android:scaleType="centerCrop"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal">
                    <android.support.v7.widget.CardView
                        android:id="@+id/cv_profile"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="10dp">
                            <RelativeLayout
                                android:layout_centerInParent="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                                <ImageView
                                    android:id="@+id/iconProfile"
                                    android:layout_width="match_parent"
                                    android:layout_height="40dp"
                                    android:src="@drawable/ic_school_black_24dp"
                                    android:layout_alignParentTop="true"
                                    android:textAlignment="center"/>
                                <TextView
                                    android:layout_marginTop="10dp"
                                    android:layout_below="@id/iconProfile"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/profile_ika"
                                    android:gravity="center"
                                    android:textSize="15sp"/>

                            </RelativeLayout>
                        </RelativeLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal">
                    <android.support.v7.widget.CardView
                        android:id="@+id/cv_member"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="10dp">
                            <RelativeLayout
                                android:layout_centerInParent="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                                <ImageView
                                    android:id="@+id/iconMember"
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp"
                                    android:src="@drawable/ic_people_black_24dp"
                                    android:layout_alignParentTop="true"
                                    android:textAlignment="center"/>
                                <TextView
                                    android:layout_marginTop="10dp"
                                    android:layout_below="@id/iconMember"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/memeber_ika"
                                    android:gravity="center"
                                    android:textSize="15sp"/>
                            </RelativeLayout>
                        </RelativeLayout>
                    </android.support.v7.widget.CardView>
                    <View
                        android:layout_width="4dp"
                        android:layout_height="match_parent"/>
                    <android.support.v7.widget.CardView
                        android:id="@+id/cv_settings"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="10dp">
                            <RelativeLayout
                                android:layout_centerInParent="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                                <ImageView
                                    android:id="@+id/iconSetting"
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp"
                                    android:src="@drawable/ic_build_black_24dp"
                                    android:layout_alignParentTop="true"
                                    android:textAlignment="center"/>
                                <TextView
                                    android:layout_marginTop="10dp"
                                    android:layout_below="@id/iconSetting"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/settings"
                                    android:gravity="center"
                                    android:textSize="15sp"/>
                            </RelativeLayout>
                        </RelativeLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</FrameLayout>
